Update vorusida.html - Orri

--- a/Hopverkefni 2/Sites/vorusida.html
+++ b/Hopverkefni 2/Sites/vorusida.html
@@ -24,14 +24,20 @@
             </div>
         </header>
         
-        <!-- Product Details -->
-        <div class="product-details">
+        <div class="header-content">
             <h1 id="product-title"></h1>
-            <img id="product-image" src="" alt="Product Image">
-            <p id="product-price"></p>
-            <p id="product-category"></p>
-            <p id="product-description"></p>
         </div>
+        <div class="product-container">
+            <div class="left-content">
+                <img id="product-image" src="" alt="Product Image">
+            </div>
+            <div class="right-content">
+                <p id="product-price"></p>
+                <p id="product-category"></p>
+                <p id="product-description"></p>
+            </div>
+        </div>
+        
 
         <!-- Similar Products -->
         <div class="similar-products">
